--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
-<html lang=" =en-us"
+﻿<!DOCTYPE html>
+<html lang="en-us">
 
       <head>
         <meta charset="utf-8" />
@@ -10,8 +10,11 @@
     <header>
         Contact Information
     </header>
-</body>
+
 
 <div>
    <h1>Email</h1> 
 </div>
+
+</body>
+</html>
