--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>About Me</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 
@@ -24,9 +24,40 @@
         </div>
     </header>
 
-    <div class="wrapper">
-        <h1
-    
+    <div class="container">
+
+      <section id= "portfolio">
+
+        <h2>Portfolio</h2>
+
+        <div class="work">
+            <img src="assets/images/room.jpg" height="200" width="300" alt="room with chairs">
+            <h3>Interior Design Website</h3>
+        </div>
+
+        <div class="work">
+            <img src="assets/images/glossier.jpg" height="200" width="300" alt="makeup">
+            <h4>Cosmetic Website</h4>
+        </div>
+
+        <div class="work">
+            <img src="assets/images/orangecover.jpg" height="200" width="300" alt="orange magazine cover">
+            <h5>Digital Magazine- CAPITAL 60</h5>
+        </div>
+
+        <div class="work">
+            <img src="assets/images/pinkcover.jpg" height="200" width="300" alt="pink magazine cover">
+            <h6>Digital Magazine- CAPITAL 60</h6>
+        </div>
+
+
+        <div class="work">
+            <img src="assets/images/quora.jpg" height="200" width="300" alt="quora homepage">
+            <h7>Cloned Quora's Webpage"</h7>
+        </div>
+
+      </section>
+
     </div>
 
     <footer>
