finished coding contact hmtl sheet

--- a/contact.html
+++ b/contact.html
@@ -1,20 +1,60 @@
 ﻿<!DOCTYPE html>
 <html lang="en-us">
 
-      <head>
-        <meta charset="utf-8" />
-          <title>Contact Information</title>
-      </head>
+<head>
+    <meta charset="utf-8" />
+    <title>Contact Me</title>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+</head>
 
 <body>
+
     <header>
-        Contact Information
+        <div class="wrapper">
+            <div id="header box">
+                <h1>Jennifer Kim</h1>
+                <nav>
+                    <ul>
+                        <li><a href="index.html">About</a></li>
+                        <li><a href="portfolio.html">Portfolio</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
     </header>
 
+    <div class="container">
+        <h2> Contact </h2>  
+           <form id="contact-form">
+               <ul>
+                   <li>
+                        <label for="name">Name</label>
+                        <input type:"text" id="name" name="name" placeholder="John Smith" required="required">
+                   </li>
 
-<div>
-   <h1>Email</h1> 
-</div>
+                   <li>
+                        <label for="email">Email</label>
+                        <input type:"email" id="email" name="email" placeholder="example@gmail.com" required="required">
+                   </li>
+
+                   <li>
+                        <label for="message">Message</label>
+                        <textarea id="message" name="message" required="required"></textarea>
+                   </li>
+                 
+               </ul>
+               <input type="submit">
+           </form>
+
+    </div>  
+   
+       
+    <footer>
+        <div id="footer-content">
+            Copyright &copy;
+        </div>
+    </footer>
 
 </body>
 </html>
