tried to work on css file to match the background

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div id="header box">
                 <h1>Jennifer Kim</h1>
                 <nav>
-                    <ul>
+                    <ul class="navbar">
                         <li><a href="index.html">About</a></li>
                         <li><a href="portfolio.html">Portfolio</a></li>
                         <li><a href="contact.html">Contact</a></li>
@@ -27,16 +27,14 @@
     <div class="container">
         <section id="main summary">
 
-            <h2>About Me</h2>
-
-            <div id="hr-line"></div>
-
+            <h2 class="padding">About Me</h2>
+            <hr class="heavy">
             <img src="assets/images/person.jpg" width="400px" alt="filler image for bio pic" id="bio-image" />
 
         </section>
 
         <br>
-        <p>
+        <p class="content">
             After graduating from Rutgers University with a B.S. and M.A. in Criminal Justice, I decided to pursue avenues in web development.
             I enjoyed researching and dissecting the conceptual ideas of roles and boundaries that individiuals create when commiting crimes.
             As well as understanding the hierarchical roles they placed on others in their criminal enterprises. However, after graduating from college
@@ -48,7 +46,7 @@
         </p>
         <br>
 
-        <p>
+        <p class="content">
             Some other things that enjoy doing is drawing and designing with doodles and continous line art. I hope to further my skills as a front end developer so that I can intertwine my hobbies with web development.
             I hope to one day create web page that has a seamless and slick interface for clients to enjoy.
         </p>
