completed main page html and css

--- a/contact.html
+++ b/contact.html
@@ -10,21 +10,22 @@
 <body>
 
     <header>
-        <div class="wrapper">
-            <div id="header box">
-                <h1>Jennifer Kim</h1>
-                <nav>
-                    <<ul class="navbar"
-                        <li><a href="index.html">About</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
+        <section id="bluebox">
+             <h1>Jennifer Kim</h1>
+        </section>
+
+        <nav>
+            <ul class="navbar">
+                <li><a href="index.html">About</a></li>
+                <li>|</li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li>|</li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <div class="container"> 
+    <div class="container">
         <section id="form">
             <h2 class="padding"> Contact </h2>
             <hr class="heavy" />
@@ -50,8 +51,8 @@
                 </fieldset>
             </form>
         </section>
-    </div>  
-    
+    </div>
+
     <footer>
         <div id="footer-content">
             Copyright &copy;
