--- a/index.html
+++ b/index.html
@@ -10,47 +10,45 @@
 <body>
 
     <header>
-        <div class="wrapper">
-            <div id="header box">
+        <section id="bluebox">
                 <h1>Jennifer Kim</h1>
-                <nav>
-                    <ul class="navbar">
-                        <li><a href="index.html">About</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
+        </section>
+
+        <nav>
+            <ul class="navbar">
+                <li><a href="index.html">About</a></li>
+                <li>|</li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li>|</li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
     <div class="container">
-        <section id="main summary">
+        <section id="main_summary">
 
             <h2 class="padding">About Me</h2>
-            <hr class="heavy">
-            <img src="assets/images/person.jpg" width="400px" alt="filler image for bio pic" id="bio-image" />
+            <hr class="top_line">
+            <img src="assets/images/person.jpg" width="260" alt="filler image for bio pic" id="bio-image">
+            <p class="content">
+                After graduating from Rutgers University with a B.S. and M.A. in Criminal Justice, I decided to pursue avenues in web development.
+                I enjoyed researching and dissecting the conceptual ideas of roles and boundaries that individiuals create when commiting crimes.
+            </p>
+            <br>
+            <p class="content">
+                However, after graduating from college I realized that it was difficult to find a job with my degree and my interest in qualitative research died down. But one day I got into
+                contact with a relative who had gotten her feet wet in the tech world. She seemed to really enjoy her work and gave me plenty of tools to start learning about computer science.
+                After grappling with JavaScript and Ruby on my own for 2 months I decided to attend Rutgers Coding Bootcamp to get a stronger grasp
+                on coding with Node, HTML, CSS, and JavaScript.
+            </p>
+            <br>
+            <p class="content">
+                Some other things that enjoy doing is drawing and designing with doodles and continous line art. I hope to further my skills as a front end developer so that I can intertwine my hobbies with web development.
+                I hope to one day create web page that has a seamless and slick interface for clients to enjoy.
+            </p>
 
         </section>
-
-        <br>
-        <p class="content">
-            After graduating from Rutgers University with a B.S. and M.A. in Criminal Justice, I decided to pursue avenues in web development.
-            I enjoyed researching and dissecting the conceptual ideas of roles and boundaries that individiuals create when commiting crimes.
-            As well as understanding the hierarchical roles they placed on others in their criminal enterprises. However, after graduating from college
-            I realized that it was quite difficult to find a job with my degree and my interest in qualitative research died down. But one day I got into
-            contact with a relative who had gotten her feet wet in the tech world. She seemed to really enjoy her work and gave me plenty of tools to start learning about computer science.
-            After grappling with JavaScript and Ruby on my own for 2 months I decided to attend Rutgers Coding Bootcamp to get a stronger grasp
-            on coding with Node, HTML, CSS, and JavaScript.
-
-        </p>
-        <br>
-
-        <p class="content">
-            Some other things that enjoy doing is drawing and designing with doodles and continous line art. I hope to further my skills as a front end developer so that I can intertwine my hobbies with web development.
-            I hope to one day create web page that has a seamless and slick interface for clients to enjoy.
-        </p>
-
 
     </div>
 
