--- a/portfolio.html
+++ b/portfolio.html
@@ -10,53 +10,54 @@
 <body>
 
     <header>
-        <div class="wrapper">
-            <div id="header box">
-                <h1>Jennifer Kim</h1>
-                <nav>
-                    <ul class="navbar">
-                        <li><a href="index.html">About</a></li>
-                        <li><a href="portfolio.html">Portfolio</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
+        <section id="bluebox">
+             <h1>Jennifer Kim</h1>
+        </section>
+
+        <nav>
+            <ul class="navbar">
+                <li><a href="index.html">About</a></li>
+                <li>|</li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li>|</li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
     <div class="container">
 
-      <section id= "portfolio">
+        <section id="portfolio">
 
-        <h2>Portfolio</h2>
+            <h2>Portfolio</h2>
 
-        <div class="room">
-            <img src="assets/images/room.jpg" height="200" width="300" alt="room with chairs">
-            <h3>Interior Design Website</h3>
-        </div>
+            <div class="room">
+                <img src="assets/images/room.jpg" height="200" width="300" alt="room with chairs">
+                <h3>Interior Design Website</h3>
+            </div>
 
-        <div class="makeup">
-            <img src="assets/images/glossier.jpg" height="200" width="300" alt="makeup">
-            <h4>Cosmetic Website</h4>
-        </div>
+            <div class="makeup">
+                <img src="assets/images/glossier.jpg" height="200" width="300" alt="makeup">
+                <h4>Cosmetic Website</h4>
+            </div>
 
-        <div class="orangecover">
-            <img src="assets/images/orangecover.jpg" height="200" width="300" alt="orange magazine cover">
-            <h5>Digital Magazine- CAPITAL 60</h5>
-        </div>
+            <div class="orangecover">
+                <img src="assets/images/orangecover.jpg" height="200" width="300" alt="orange magazine cover">
+                <h5>Digital Magazine- CAPITAL 60</h5>
+            </div>
 
-        <div class="pinkcover">
-            <img src="assets/images/pinkcover.jpg" height="200" width="300" alt="pink magazine cover">
-            <h6>Digital Magazine-CAPITAL 60</h6>
-        </div>
+            <div class="pinkcover">
+                <img src="assets/images/pinkcover.jpg" height="200" width="300" alt="pink magazine cover">
+                <h6>Digital Magazine-CAPITAL 60</h6>
+            </div>
 
 
-        <div class="quora">
-            <img src="assets/images/quora.jpg" height="200" width="300" alt="quora homepage">
-            <h7>Cloned Quora's Webpage"</h7>
-        </div>
+            <div class="quora">
+                <img src="assets/images/quora.jpg" height="200" width="300" alt="quora homepage">
+                <h7>Cloned Quora's Webpage"</h7>
+            </div>
 
-      </section>
+        </section>
 
     </div>
 
