finished css and html for contact

--- a/contact.html
+++ b/contact.html
@@ -28,26 +28,23 @@
     <div class="container">
         <section id="form">
             <h2 class="padding"> Contact </h2>
-            <hr class="heavy" />
+            <hr class="top_line">
             <form action="">
                 <fieldset>
                     <legend></legend>
-
                     <label for="name">Name</label>
                     <br>
-                    <input type:"text" id="name" name="name" placeholder="John Smith" required="required">
-
+                    <input type="text" id="name" name="fullname" placeholder="John Smith">
+                    <br>
                     <label for="email">Email</label>
                     <br>
-                    <input type:"email" id="email" name="email" placeholder="example@gmail.com" required="required">
-
+                    <input type="email" id="email" name="fullemail" placeholder="example@gmail.com" required>
+                    <br>
                     <label for="message">Message</label>
                     <br>
-                    <textarea id="message" name="message" required="required"></textarea>
-
+                    <input type="textarea" id="message">
                     <br>
                     <input type="submit">
-
                 </fieldset>
             </form>
         </section>
