--- a/portfolio.html
+++ b/portfolio.html
@@ -30,6 +30,7 @@
         <section id="portfolio">
 
             <h2>Portfolio</h2>
+            <hr class="top_line">
 
             <div class="room">
                 <img src="assets/images/room.jpg" height="200" width="300" alt="room with chairs">
