--- a/portfolio.html
+++ b/portfolio.html
@@ -25,37 +25,47 @@
         </nav>
     </header>
 
+
     <div class="container">
 
         <section id="portfolio">
-
-            <h2>Portfolio</h2>
+            <h2 class="padding">Portfolio</h2>
             <hr class="top_line">
 
             <div class="room">
-                <img src="assets/images/room.jpg" height="200" width="300" alt="room with chairs">
-                <h3>Interior Design Website</h3>
+                <img src="assets/images/room.jpg" height="196 " width="264" alt="room with chairs">
+                <article>
+                    <h3>Interior Design Website</h3>
+                </article>
             </div>
 
             <div class="makeup">
-                <img src="assets/images/glossier.jpg" height="200" width="300" alt="makeup">
-                <h4>Cosmetic Website</h4>
+                <img src="assets/images/glossier.jpg" height="196"width="264" alt="makeup">
+                <article>
+                    <h3>Cosmetic Website</h3>
+                </article>
             </div>
 
             <div class="orangecover">
-                <img src="assets/images/orangecover.jpg" height="200" width="300" alt="orange magazine cover">
-                <h5>Digital Magazine- CAPITAL 60</h5>
+                <img src="assets/images/orangecover.jpg" height="196" width="264" alt="orange magazine cover">
+                <article>
+                    <h3>Digital Magazine-CAPITAL 60</h3>
+                </article>
             </div>
 
             <div class="pinkcover">
-                <img src="assets/images/pinkcover.jpg" height="200" width="300" alt="pink magazine cover">
-                <h6>Digital Magazine-CAPITAL 60</h6>
+                <img src="assets/images/pinkcover.jpg" height="196" width="264" alt="pink magazine cover">
+                <article>
+                    <h3>Digital Magazine-CAPITAL 60</h3>
+                </article>
             </div>
 
 
             <div class="quora">
-                <img src="assets/images/quora.jpg" height="200" width="300" alt="quora homepage">
-                <h7>Cloned Quora's Webpage"</h7>
+                <img src="assets/images/quora.jpg" height="196" width="264" alt="quora homepage">
+                <article>
+                    <h3>Cloned Quora's Webpage</h3>
+                </article>
             </div>
 
         </section>
